@@ -52,6 +52,11 @@ MODULE_SCOPE int mat_compare(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *co
 MODULE_SCOPE int mat_convertScaleAbs(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int mat_copyMakeBorder(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int mat_countNonZero(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
+#ifdef TCL_USE_OPENCV4
+#if CV_VERSION_GREATER_OR_EQUAL(4, 8, 0)
+MODULE_SCOPE int mat_hasNonZero(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
+#endif
+#endif
 MODULE_SCOPE int mat_determinant(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int mat_divide(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int mat_eigen(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
