@@ -2722,7 +2722,7 @@ int mat_countNonZero(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv
     int result = 0;
 
     if (objc != 2) {
-        Tcl_WrongNumArgs(interp, 1, objv, "matrix?");
+        Tcl_WrongNumArgs(interp, 1, objv, "matrix");
         return TCL_ERROR;
     }
 
@@ -2746,6 +2746,42 @@ int mat_countNonZero(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv
     Tcl_SetObjResult(interp, Tcl_NewIntObj(result));
     return TCL_OK;
 }
+
+
+#ifdef TCL_USE_OPENCV4
+#if CV_VERSION_GREATER_OR_EQUAL(4, 8, 0)
+int mat_hasNonZero(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
+{
+    cv::Mat *mat;
+    bool result = false;
+
+    if (objc != 2) {
+        Tcl_WrongNumArgs(interp, 1, objv, "matrix");
+        return TCL_ERROR;
+    }
+
+    mat = (cv::Mat *) Opencv_FindHandle(cd, interp, OPENCV_MAT, objv[1]);
+    if (!mat) {
+        return TCL_ERROR;
+    }
+
+    if (mat->channels() != 1) {
+        return Opencv_SetResult(interp, cv::Error::StsBadArg, "single channel array required");
+    }
+
+    try {
+        result = cv::hasNonZero(*mat);
+    } catch (const cv::Exception &ex) {
+        return Opencv_Exc2Tcl(interp, &ex);
+    } catch (...) {
+        return Opencv_Exc2Tcl(interp, NULL);
+    }
+
+    Tcl_SetObjResult(interp, Tcl_NewBooleanObj((int) result));
+    return TCL_OK;
+}
+#endif
+#endif
 
 
 int mat_determinant(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv)
