@@ -1,3 +1,10 @@
+2024-02-28 Danilo Chang
+
+	* Implement command: hasNonZero
+	* Let QRCodeDetector return string, and fix test cases
+	* Add ::cv::REDUCE_SUM2 option to ::cv::reduce
+	* Implement stackBlur command
+
 2023-12-17 Danilo Chang
 
 	* Bump version to v0.16
